--- a/app/src/main/res/layout/list_item_person_information.xml
+++ b/app/src/main/res/layout/list_item_person_information.xml
@@ -28,6 +28,7 @@
             <ImageView
                 android:id="@+id/ivAvatar"
                 app:imageUrl="@{actor.profile_path}"
+                android:scaleType="centerCrop"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 tools:src="@tools:sample/avatars" />
